ユーザー管理

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,3 +1,4 @@
+
 <%= render "shared/header" %>
 <div class='main'>
 
@@ -120,6 +121,10 @@
   </div>
   <%# /FURIMAの特徴 %>
 
+
+
+
+<!-- ここから下に商品一覧のコードとかが来る -->
   <%# 商品一覧 %>
   <div class='item-contents'>
     <h2 class='title'>ピックアップカテゴリー</h2>
